statements UI faza 4.
